@@ -12,6 +12,7 @@ import org.springframework.security.config.annotation.method.configuration.Enabl
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -21,6 +22,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -36,42 +38,49 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+                // 1. Configuração de CORS
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+                // 2. Desabilitar CSRF (Necessário para APIs Stateless)
                 .csrf(AbstractHttpConfigurer::disable)
+
+                // 3. Regras de Autorização
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(
                                 "/api/auth/**",
-                                "/api/articles",
-                                "/api/articles/**",
-                                "/api/categories",
-                                "/api/categories/**",
-                                "/api/tags",
-                                "/api/tags/**",
-                                "/api/pages",
-                                "/api/pages/**",
-                                "/api/comments/article/**",
-                                "/api/newsletter/subscribe",
-                                "/api/newsletter/confirm",
-                                "/api/newsletter/unsubscribe",
-                                "/api-docs/**",
+                                "/api/articles/**",      // Público: Leitura de artigos
+                                "/api/categories/**",    // Público: Categorias
+                                "/api/tags/**",          // Público: Tags
+                                "/api/pages/**",         // Público: Páginas institucionais
+                                "/api/comments/article/**", // PÚBLICO: Rota de comentários que você está testando
+                                "/api/newsletter/**",    // Público: Inscrição
+                                "/uploads/**",           // Público: Imagens e arquivos
+                                "/static/**",            // Público: Recursos estáticos
+                                "/h2-console/**",        // Público: Console de banco de dados (se houver)
+                                "/v3/api-docs/**",       // Swagger/OpenAPI
                                 "/swagger-ui/**",
                                 "/swagger-ui.html",
-                                "/v3/api-docs/**",
-                                "/swagger-resources/**",
-                                "/webjars/**",
-                                "/h2-console/**",
-                                "/uploads/**",
-                                "/actuator/**"
+                                "/actuator/**"           // Métricas do sistema
                         ).permitAll()
+
+                        // Qualquer outra rota exige login (Painel Administrativo, etc)
                         .anyRequest().authenticated()
                 )
+
+                // 4. Configuração de Sessão (Stateless para JWT)
                 .sessionManagement(session -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
+
+                // 5. Provedor de Autenticação
                 .authenticationProvider(authenticationProvider())
+
+                // 6. Filtro JWT antes do filtro de usuário/senha
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+
+                // 7. Permitir Frames para o H2 Console
                 .headers(headers -> headers
-                        .frameOptions(frame -> frame.sameOrigin())
+                        .frameOptions(HeadersConfigurer.FrameOptionsConfig::sameOrigin)
                 );
 
         return http.build();
@@ -80,8 +89,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
+        // Em produção, substitua "*" pela URL do seu Frontend (ex: https://softchaos.com.br)
         config.setAllowedOriginPatterns(List.of("*"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         config.setAllowedHeaders(List.of("*"));
         config.setExposedHeaders(List.of("Authorization"));
         config.setAllowCredentials(false);
